# yoiMAchine

./: .gitignore  CMakeLists.txt  yoiMAchine.jucer
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/yoiMAchine.xcodeproj/: project.pbxproj
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
RnboExport/: RnboYoi_binary.cpp  description.json  rnbo_yoi.cpp
Source/: MyColours.h  ParamIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
